# cs4248_project

./: .gitignore  create_dataset.py  dataset_inference.py  deepseek_sarcasm.jsonl  deepseek_sarcastic.jsonl  filter_pairs.py  gemini_sarcastic.jsonl  generate_sarcastic.py  main.py  neutral_from_sarcastic.jsonl  note  passed_pairs.jsonl  pyproject.toml  rl.py  run_dataset_inference.sh  run_rl.sh  run_sft.sh  sarcastic_generated.jsonl  sft.py
dataset/: create_dataset.py
rewards/: __init__.py  composite_reward.py  config.py  content_reward.py  degeneration_reward.py  diversity_reward.py  fluency_reward.py  freq_reward.py  sarcasm_reward.py  style_reward.py  template_hack_reward.py  test_rewards.py
testing/: test_rewards.py  test_sarc_model.py
